# portfolio

./: README
my_mincaml/src/: .gitignore  Makefile  README.md  alpha.ml  alpha.mli  array_access.ml  assoc.ml  beta.ml  beta.mli  closure.ml  closure.mli  constFold.ml  cse.ml  cse.mli  dmp.sh  dune  dune-project  elim.ml  elim.mli  float.c  id.ml  inline.ml  inline.mli  job.sh  kNormal.ml  kNormal.mli  lexer.mll  m.ml  main.ml  mclean.sh  min-caml.opam  mloc.ml  parser.mly  ppmConvert.c  s.ml  spike.sh  spike_test.sh  stub.c  stub_for_spike.c  syntax.ml  (+8 more)
my_mincaml/src/Myarch/: asm.ml  asm.mli  emit.ml  globalsConvert.ml  libmincaml.s  newlibmincaml.s  regAlloc.ml  simm.ml  virtual.ml
my_mincaml/src/Myarch/ssa/: bpschedule.ml  braid.ml  datagraph.ml  dfa.ml  emitssa.ml  genoutlib.ml  graphviz2.ml  regssa.ml  schedule.ml  ssa.ml
my_mincaml/src/PowerPC/: regAlloc.ml  virtual.ml
my_mincaml/src/RV32/: Regssa.ml  asm.ml  asm.mli  bpschedule.ml  datagraph.ml  dfa.ml  emit.ml  emitssa.ml  isa.ml  libmincaml.S  miniMLRuntime.ml  regAlloc.ml  simm.ml  ssa.ml  virtual.ml
my_mincaml/src/SPARC/: asm.ml  regAlloc.ml
my_mincaml/src/cmpex/: .gitignore
my_mincaml/src/cmpex/week1/: gcd.ml  release1.md  (+1 more)
my_mincaml/src/min-rt/: Makefile  README.txt  min-rt.ml  miniMLRuntime.ml
my_mincaml/src/mytest/: .gitignore  array.ml  comment.ml  fbranch.ml  float.ml  float2.ml
my_mincaml/src/raytracer/: minrt.ml  minrt_ssa_i600.s  minrt_word.s
my_mincaml/src/test/: sum.asm
my_mincaml/src/x86/: asm.ml  asm.mli  dfa.ml  emit.ml  globalsConvert.ml  regAlloc.ml  simm.ml  virtual.ml
(+32 files in other folders)
