(executable
 (name main)
 (package min-caml)
 (public_name mincaml)
 (foreign_stubs (language c) (names float))
 (libraries str ocamlgraph domainslib))

(ocamllex lexer)
(ocamlyacc parser)

(copy_files
 (files x86/*)
 (enabled_if (= %{profile} x86))
 (alias to_x86))

(copy_files
 (files PowerPC/*)
 (enabled_if (= %{profile} ppc))
 (alias to_ppc))

(copy_files
 (files Myarch/* )
 (enabled_if (or (= %{profile} myarch) (= %{profile} dev) (= %{profile} release)))
 (alias to_myarch))
(copy_files
 (files Myarch/ssa/*)
 (enabled_if (or (= %{profile} myarch ) (= %{profile} dev) (= %{profile} release)))
 (alias to_myarch))

(copy_files
 (files RV32/*)
 (enabled_if (= %{profile} rv32))
 (alias to_rv32))

(env
 (dev
  (flags (:standard -warn-error -a))))
